--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,8 +1,6 @@
 <div class="mat-card">
 
-  <h3>Clientes:  <button mat-icon-button (click)="loop()">
-    <mat-icon>loop</mat-icon>
-  </button></h3>
+  <h3>Clientes:</h3>
 
     <mat-card>
 <table > 
@@ -12,12 +10,25 @@
     <td>Nome</td>
     <td>CPF</td>
     <td>Email</td>
+    <td>Data de Nascimento</td>
     <td>Telefone</td>
     <td><mat-icon>directions_car</mat-icon></td>
+  
     <td><mat-icon>create</mat-icon></td>
   
   </tr>
-  <tbody *ngIf="simpleRqClient$ |async as clients">
+  <tbody >
+   <tr>
+  
+
+    <td><button mat-mini-fab color='primary' (click)="addCar(c)"><mat-icon>add_circle_outline</mat-icon></button></td>
+    <td><button mat-mini-fab color="primary" (click)="editClient(c)"><mat-icon>create</mat-icon></button></td>
+    
+  </tr>
+  </tbody>
+</table>
+</mat-card>
+<!-- <tbody *ngIf="simpleRqClient$ |async as clients">
   <tr *ngFor="let c of clients">
     <td><mat-icon>account_circle</mat-icon></td>
     <td>{{c.id}}</td>
@@ -25,20 +36,10 @@
     <td>{{c.CPF}}</td>
     <td>{{c.EMAIL}}</td>
     <td>{{c.NUMBER}}</td>
-
-    <td><mat-icon>directions_car</mat-icon></td>
-    <td><button mat-mini-fab color="primary" (click)="editClient(c)"><mat-icon>create</mat-icon></button></td>
-    
-  </tr>
-  </tbody>
-</table>
-</mat-card>
-<!--
 <div mat-dialog-actions>
     <button mat-button (click)="cancel()">Cancelar</button>
     <button mat-button [mat-dialog-close]="client" cdkFocusInitial>Salvar</button>
 </div>-->
-
 
 
 
