--- a/src/app/EdCep/cep.component.html
+++ b/src/app/EdCep/cep.component.html
@@ -23,21 +23,12 @@
                     <input matInput placeholder="Minas Gerais" id="Estado"name="est" [(ngModel)]="cep.estado" > 
                     <mat-hint>Região</mat-hint>
                     </mat-form-field>
+                    <mat-form-field appearance="legacy">
+                        <mat-label>Rua</mat-label>
+                        <input matInput placeholder="Rua" name="log" [(ngModel)]="cep.logradouro" > 
+                        </mat-form-field>
                 <br>
-                <mat-form-field appearance="legacy">
-                    <mat-label>Número</mat-label>
-                    <input matInput placeholder="100" name="num" [(ngModel)]="cep.numero" > 
-                    <mat-hint>Número da casa</mat-hint>
-                    </mat-form-field>
-                    <mat-form-field appearance="legacy">
-                        <mat-label>Complemento</mat-label>
-                        <input matInput placeholder="100" name="com" [(ngModel)]="cep.complemento"> 
-                        <mat-hint>Complemento da casa</mat-hint>
-                        </mat-form-field>
-                    <mat-form-field appearance="legacy">
-                        <mat-label>Logradouro</mat-label>
-                        <input matInput placeholder="Logradouro" name="log" [(ngModel)]="cep.logradouro" > 
-                        </mat-form-field>
+                    
                     
                         </form>
 </div>
