--- a/src/app/register-client/register-client.component.html
+++ b/src/app/register-client/register-client.component.html
@@ -9,38 +9,38 @@
   
 <mat-form-field appearance="legacy">
     <mat-label>Nome</mat-label>
-    <input matInput placeholder="" [(ngModel)]="cliente.Name" name="name" #nameField="ngModel" required> 
+    <input matInput placeholder="" [(ngModel)]="cliente.NAME" name="name" #nameField="ngModel" required> 
     <mat-hint>Preencha com o nome completo</mat-hint>
     <mat-error *ngIf="nameField.invalid && nameField.touched">Digite um nome valido</mat-error>
     </mat-form-field>
 
   <mat-form-field appearance="legacy">
     <mat-label>CPF</mat-label>
-    <input matInput placeholder=""[(ngModel)]="cliente.Cpf" name="cpf" required>
+    <input matInput placeholder=""[(ngModel)]="cliente.CPF" name="cpf" required>
     <mat-hint>Preencha com CPF</mat-hint>
   </mat-form-field>
   <mat-form-field appearance="legacy">
     <mat-label>Date de nascimento</mat-label>
-    <input matInput [matDatepicker]="picker" [(ngModel)]="cliente.Dates" (dateInput)="addEvent($event)"name="dates" required>
+    <input matInput [matDatepicker]="picker" [(ngModel)]="cliente.DATE" (dateInput)="addEvent($event)"name="dates" required>
     <mat-datepicker-toggle matSuffix [for]="picker" ></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
   </mat-form-field>
   <br>
   <mat-form-field appearance="legacy">
     <mat-label>Telefone</mat-label>
-    <input matInput placeholder="" [(ngModel)]="cliente.Tell"name="tell" #phone="ngModel" required> 
+    <input matInput placeholder="" [(ngModel)]="cliente.TELL"name="TELL" #phone="ngModel" required> 
     <mat-error *ngIf="phone.errors?.required">Coloque um número de telefone</mat-error>
     <mat-hint>Celular</mat-hint>
   </mat-form-field>
   <mat-form-field appearance="legacy">
     <mat-label>E-mail</mat-label>
-    <input matInput placeholder=""[(ngModel)]="cliente.Email" name="email" type="email" required email #email="ngModel">
+    <input matInput placeholder=""[(ngModel)]="cliente.EMAIL" name="email" type="email" required email #email="ngModel">
     <mat-error *ngIf="email.errors?.required">Insira um email</mat-error>
     <mat-error *ngIf="email.errors?.email">Insira um email valido</mat-error>
     <mat-hint>E-mail de contato</mat-hint>
   </mat-form-field>
   <mat-radio-group aria-label="Tipo de Pessoa" style="display: flex;flex-direction: column; margin-left: 34%; margin-top: -4%;"
-    [(ngModel)]="cliente.people" name="people" required>
+    [(ngModel)]="cliente.PEOPLE" name="people" required>
     <mat-radio-button value="Juridica">Pessoa Juridica</mat-radio-button>
     <mat-radio-button value="Fisica">Pessoa Fisica</mat-radio-button>
   </mat-radio-group>
@@ -80,7 +80,18 @@
   <mat-hint>KM do carro</mat-hint>
 </mat-form-field>-->
 <app-cep></app-cep>
- <button mat-raised-button color="primary"style="margin-left:50%" [disabled]="!formClient.valid && !formCar.valid" >Salvar</button>
+
+<mat-form-field appearance="legacy" >
+  <mat-label>Número</mat-label>
+  <input matInput placeholder="100" name="num" [(ngModel)]="cliente.CEP.numero" required> 
+  <mat-hint>Número da casa</mat-hint>
+  </mat-form-field>
+  <mat-form-field appearance="legacy">
+      <mat-label>Complemento</mat-label>
+      <input matInput placeholder="100" name="com" [(ngModel)]="cliente.CEP.complemento"> 
+      <mat-hint>Complemento da casa</mat-hint>
+      </mat-form-field>
+ <button mat-raised-button color="primary"style="margin-left:5%" [disabled]="!formClient.valid && !formCar.valid" >Salvar</button>
 <button mat-raised-button type="reset" color=""style="margin-left:5px; background-color:yellow;">Limpar</button>
 </form>
 
