--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -20,7 +20,7 @@
              <button mat-button [matMenuTriggerFor]="os">Ordem de Serviço</button>
             <mat-menu #os="matMenu">
                 <button mat-menu-item routerLink="/addos">Criar OS</button>
-               
+               <button mat-menu-item routerLink="/listos">Listar OS</button>
                 
                 
             </mat-menu>
