--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -6,7 +6,7 @@
                 <button mat-menu-item routerLink="/registerclient">Cliente</button>
                 <button mat-menu-item routerLink="/cadastropeca">Peça</button>
                 <button mat-menu-item routerLink="/registerfunc">Funcionario</button>
-                
+                <button mat-menu-item routerLink="/registerserv">Serviço</button>
                 
             </mat-menu>
                 
