--- a/src/app/edit-os/edit-os.component.html
+++ b/src/app/edit-os/edit-os.component.html
@@ -1,4 +1,30 @@
-<mat-card *ngIf="simplereqos$ | async as os">
+<div *ngIf="simplereqos$ | async as os">
 
-    <p>{{os.CLIENTE}}</p>
-</mat-card>
+<mat-card>
+    <form>
+       <mat-card-title >
+    O.S {{os.id}}
+       </mat-card-title>
+       <mat-form-field appearance="legacy">
+        <input matInput readonly value="{{os.PLACA}}">
+        <mat-hint>Placa</mat-hint>
+      </mat-form-field>
+       <mat-form-field appearance="legacy">
+        <input matInput readonly value="{{os.MODELO}}">
+       <mat-icon matPrefix>directions_car</mat-icon>
+      </mat-form-field>
+      <mat-form-field appearance="legacy">
+        <input matInput readonly value="{{os.CLIENTE}}">
+       <mat-icon matPrefix>account_circle</mat-icon>
+      </mat-form-field>
+
+    </form>
+    </mat-card>
+    <br>
+    <mat-card>
+
+    </mat-card>
+</div>
+
+
+
