--- a/src/app/edit-os/edit-os.component.html
+++ b/src/app/edit-os/edit-os.component.html
@@ -5,8 +5,8 @@
        <mat-card-title >
     O.S {{os.id}}
        </mat-card-title>
-       <mat-form-field appearance="legacy">
-        <input matInput readonly value="{{os.PLACA}}">
+       <mat-form-field appearance="legacy" style="margin-left: 17%;">
+       <input matInput readonly value="{{os.PLACA}}">
         <mat-hint>Placa</mat-hint>
       </mat-form-field>
        <mat-form-field appearance="legacy">
@@ -22,7 +22,47 @@
     </mat-card>
     <br>
     <mat-card>
+      <form>   
+        <mat-label>Adição de peças</mat-label>
+        <br>
+        <button mat-mini-fab color="primary"style="margin-rigth:-5%;margin-left:3%;" (click)="add()"><mat-icon>add</mat-icon></button>
+   
 
+<mat-card>
+  <table> 
+   
+    <tbody>
+        <tr *ngFor="let c of obj">
+            <td>{{c.NOME}}</td>
+            <td><button mat-mini-fab color="primary"><mat-icon>add</mat-icon></button></td>
+        
+      
+    </tr>
+    </tbody>
+  </table>
+
+</mat-card>
+
+
+
+
+
+
+
+
+
+<br>
+
+            <mat-form-field>
+              <mat-label>Situação</mat-label>
+              <mat-select>
+                <mat-option *ngFor="let stts of stt" [value]="stts">
+                  {{stts.name}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+
+      </form>
     </mat-card>
 </div>
 
