paginação em tabela de servico

--- a/src/app/add-estoque/add-estoque.component.html
+++ b/src/app/add-estoque/add-estoque.component.html
@@ -63,7 +63,7 @@ margin-top: 2px;">
             <td>{{c.MARCA}}</td>
             <td>{{c.COD_BARRA}}</td>
             <td>{{c.QTD}}</td>
-            <td>{{c.PRICE}}</td>
+            <td>R$ {{c.PRICE}}</td>
       
     </tr>
     </tbody>
