--- a/src/app/adc-pecas/adc-pecas.component.html
+++ b/src/app/adc-pecas/adc-pecas.component.html
@@ -1,30 +1,46 @@
 
 <mat-tab-group >
   <mat-tab label="Peça em estoque">
-<table > 
-    <tr>
-  
-        <td>Nome</td>
-        <td>Adicionar</td>
-   
-      </tr>
-      <tbody *ngIf="simpleRqProd$ |async as Peca">
-          <tr *ngFor="let c of Peca">
-              <td>{{c.NOME}}</td>
-              <td><button mat-mini-fab color="primary" (click)="adc(c)"><mat-icon>add</mat-icon></button></td>
+    <mat-table #Table [dataSource]="DataTable">  
+
        
-      </tr>
-  
-      </tbody>
-       
-    </table>
+      <ng-container matColumnDef="name">  
+          <mat-header-cell *matHeaderCellDef sticky> Nome  </mat-header-cell>  
+          <mat-cell *matCellDef="let c"> {{c.NOME}} </mat-cell>  
+      </ng-container>  
+      <ng-container matColumnDef="adicionar" >  
+        <mat-header-cell *matHeaderCellDef style="margin-left: 2%;"> Adicionar</mat-header-cell>  
+        <mat-cell *matCellDef="let c"><button mat-mini-fab  color="primary" (click)="adc(c)"><mat-icon>add</mat-icon></button> </mat-cell>  
+    </ng-container>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>  
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row> 
+      </mat-table>
    
     <div *ngFor="let c of obj">
       {{c.NOME}}
     </div>
     <button mat-mini-fab color="primary" id="saves" [mat-dialog-close]="obj" cdkFocusInitial><mat-icon>done</mat-icon></button>
   </mat-tab>
-  <mat-tab label="Peça Digitada">
-    
+  <mat-tab label="Serviço">
+
+
+    <mat-table #Table [dataSource]="DataTableServ">  
+
+       
+      <ng-container matColumnDef="name">  
+          <mat-header-cell *matHeaderCellDef sticky> Nome  </mat-header-cell>  
+          <mat-cell *matCellDef="let c"> {{c.NOME}} </mat-cell>  
+      </ng-container>  
+      <ng-container matColumnDef="adicionar" >  
+        <mat-header-cell *matHeaderCellDef style="margin-left: 2%;"> Adicionar</mat-header-cell>  
+        <mat-cell *matCellDef="let c"><button mat-mini-fab  color="primary" (click)="adc(c)"><mat-icon>add</mat-icon></button> </mat-cell>  
+    </ng-container>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>  
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row> 
+      </mat-table>
+      <div *ngFor="let c of obj">
+        {{c.NOME}}
+      </div>
+      <button mat-mini-fab color="primary" id="saves" [mat-dialog-close]="obj" cdkFocusInitial><mat-icon>done</mat-icon></button>
   </mat-tab>
 </mat-tab-group>
