--- a/src/app/add-servico/add-servico.component.html
+++ b/src/app/add-servico/add-servico.component.html
@@ -38,12 +38,12 @@ margin-top: 2px;">
         <!-- For ID -->  
         <ng-container matColumnDef="descricao">  
             <mat-header-cell *matHeaderCellDef> Descrição </mat-header-cell>  
-            <mat-cell *matCellDef="let c"> {{c.DESCRICAO}} </mat-cell>  
+            <mat-cell *matCellDef="let c"> {{c.NOME}} </mat-cell>  
         </ng-container>  
          
         <ng-container matColumnDef="valor">  
             <mat-header-cell *matHeaderCellDef> Valor Total </mat-header-cell>  
-            <mat-cell *matCellDef="let c"> R${{c.VALOR}} </mat-cell>  
+            <mat-cell *matCellDef="let c"> R${{c.PRECODEVENDA | number : '.2'}} </mat-cell>  
         </ng-container> 
         <ng-container matColumnDef="lucro">  
             <mat-header-cell *matHeaderCellDef> Lucro </mat-header-cell>  
@@ -51,11 +51,11 @@ margin-top: 2px;">
         </ng-container> 
         <ng-container matColumnDef="ganhodono">  
             <mat-header-cell *matHeaderCellDef> Valor Ganho </mat-header-cell>  
-            <mat-cell *matCellDef="let c"> R${{c.GANHODONO}} </mat-cell>  
+            <mat-cell *matCellDef="let c"> R${{c.GANHODONO | number : '.2'}} </mat-cell>  
         </ng-container>  
         <ng-container matColumnDef="ganhoFuncionario">  
             <mat-header-cell *matHeaderCellDef> Funciorio Recebe </mat-header-cell>  
-            <mat-cell *matCellDef="let c"> R${{c.GANHOFUN}} </mat-cell>  
+            <mat-cell *matCellDef="let c"> R${{c.GANHOFUN | number : '.2'}} </mat-cell>  
         </ng-container>
         <ng-container matColumnDef="delete" >  
             <mat-header-cell *matHeaderCellDef style="margin-left: 2%;"> Deletar</mat-header-cell>  
