--- a/src/app/adc-pecas/adc-pecas.component.html
+++ b/src/app/adc-pecas/adc-pecas.component.html
@@ -15,7 +15,8 @@
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>  
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row> 
       </mat-table>
-   
+      <mat-paginator #paginator [pageSize]="5" [pageSizeOptions]="[5, 10, 20]">  
+      </mat-paginator>  
     <div *ngFor="let c of obj">
       {{c.NOME}}
     </div>
@@ -38,6 +39,8 @@
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>  
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row> 
       </mat-table>
+      <mat-paginator #paginator [pageSize]="5" [pageSizeOptions]="[5, 10, 20]">  
+      </mat-paginator>  
       <div *ngFor="let c of obj">
         {{c.NOME}}
       </div>
